# loyelto

./: .gitignore  Makefile  README.md  app.json  dcck  docker-compose.yml  metro.config.js  package-lock.json
.github/workflows/: anchor_build.yml  docker.yml
app/: +not-found.tsx
app/(tabs)/: _layout.tsx  index.tsx
containers/anchor/: Dockerfile
containers/beat/: Dockerfile
containers/fastapi/: Dockerfile  entrypoint.sh
containers/landing/: .dockerignore  Dockerfile
containers/landing/config/: loyel.to.conf
containers/nginx/: Dockerfile
containers/postgres/: Dockerfile
containers/redis/: Dockerfile
containers/worker/: Dockerfile
infra/: base-prod.yml  base-stage.yml  base.yml  dev.yml  monitor.yml  prod.yml  stage.yml  traefik.yml
infra/configs/: loki-config.yaml  promtail-config.yaml
infra/env/: stage_env_example
srcs/backend/anchor/: Anchor.toml  Cargo.toml
srcs/backend/anchor/exchange/: Anchor.toml
srcs/backend/anchor/programs/business_factory/: Cargo.toml
srcs/backend/anchor/programs/business_factory/src/: lib.rs
srcs/backend/anchor/programs/loyl_settlement/: Cargo.toml
srcs/backend/anchor/programs/loyl_settlement/src/: lib.rs
srcs/backend/anchor/programs/loyl_token/: Cargo.toml
srcs/backend/anchor/programs/loyl_token/src/: lib.rs
srcs/backend/anchor/scripts/: patch_idl.py
srcs/backend/anchor/tests/: exchange.ts
srcs/backend/loylapi/: alembic.ini  pyproject.toml  run_migrations.py
srcs/backend/loylapi/app/: celery_app.py  main.py  offchain_code.txt  utils.py
srcs/backend/loylapi/app/admin/: __init__.py  auth.py  views.py
srcs/backend/loylapi/app/admin/templates/: login.html
srcs/backend/loylapi/app/alembic/: env.py  env_bkp.py
srcs/backend/loylapi/app/alembic/versions/: 0001_initial.py  0001_initial_schema.py  0002_owner_pubkey.py  246f8ff500d1_initial_schema.py  2a9d169a09b9_make_email_phone_nullable.py  56ea7b5ea08b_add_promotion_campaign.py  5df183008955_init.py  7dacb2d667c5_fix_fk_in_busines_reviews.py  92b7fd27073d_add_rate_loyl_to_businesses.py  cc5c6e8f22bf_add_unique_index_on_settlement_token.py
srcs/backend/loylapi/app/api/: crud_router.py  router.py  ws.py
srcs/backend/loylapi/app/api/v1/: __init__.py  admin_auth.py  auth.py  balances.py  business_onboarding.py  business_rate.py  businesses.py  loyalty.py  point_txs.py  reviews.py  swap_txs.py  tasks.py  token_minting.py  tokens.py  tx_history.py  users.py  voucher_mint.py  voucher_nfts.py  voucher_templates.py  vouchers_my.py  wallets.py
srcs/backend/loylapi/app/cli/: admin.py
srcs/backend/loylapi/app/core/: security.py  settings.py
srcs/backend/loylapi/app/crud/: base.py
srcs/backend/loylapi/app/db/: base.py  session.py
srcs/backend/loylapi/app/models/: __init__.py  admin.py  balance.py  business.py  promotion.py  tasks.py  token.py  token_pool.py  transactions.py  user.py  voucher.py  wallet.py
srcs/backend/loylapi/app/schemas/: admin.py  balance.py  base.py  business.py  point_tx.py  promotion.py  review.py  swap_tx.py  tasks.py  token.py  types.py  user.py  voucher.py  wallet.py
srcs/backend/loylapi/app/services/: admin.py  balance.py  base.py  bubblegum.py  business.py  celery_wrapper.py  exchange_client.py  loyalty.py  loyl_token_client.py  point_tx.py  pool.py  privy_client.py  promotion_campaign.py  pubsub.py  rate.py  review.py  swap_exec.py  swap_tx.py  task.py  token.py  token_mint.py  transfer_exec.py  tx_history.py  user.py  voucher.py  voucher_nft.py  voucher_template.py  wallet.py
srcs/backend/loylapi/app/tasks/: __init__.py  business.py  confirm.py  onchain.py  transfer.py  voucher.py
srcs/backend/loylapi/app/ws/: manager.py  ws_redis.py
srcs/backend/loylapi/app_client/: program_id.py
srcs/backend/loylapi/app_client/accounts/: __init__.py  pool.py
srcs/backend/loylapi/app_client/instructions/: __init__.py  init_pool.py  swap.py
srcs/backend/loylapi/tests/: conftest.py  test_balance_crud.py  test_busines_crud.py  test_pointtx_crud.py  test_swaptx_crud.py  test_tasks_crud.py  test_token_crud.py  test_user_crud.py  test_voucher_template_crud.py  test_vouchernft_crud.py  test_wallet_crud.py
srcs/frontend/mobile/business/: README.md  app.json  package-lock.json  package.json
srcs/frontend/mobile/consumer/: .babelrc.js  App.js  app.json  (+3 more)
srcs/frontend/mobile/consumer-fixed/: App.tsx  README.md  SAFE_AREA_GUIDE.md  app.json  babel.config.js  entrypoint.js  expo-router.config.js  index.ts  metro.config.js  package-lock.json  package.json
srcs/frontend/mobile/consumer-new/: package-lock.json  package.json
(+185 files in other folders)
