[project]
name = "loylapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "pydantic-settings>=2.9.1",
    "pydantic[email]>=2.11.3",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.1",
    "solana>=0.36.6",
    "anchorpy>=0.21.0",
    "base58>=2.1.1",
    "celery>=5.5.2",
    "python-dotenv>=1.1.0",
    "typer[all]>=0.15.3",
    "ipython>=9.2.0",
    "autoflake>=2.3.1",
    "genpy>=2022.1",
    "python-jose>=3.4.0",
    "redis>=6.1.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "black>=25.1.0",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]
