[package]
name = "loyl_token"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "loyl_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = [
  "anchor-lang/idl-build",
  "anchor-spl/idl-build",
]
default = ["init-if-needed"]
init-if-needed = []

[dependencies]
anchor-lang  = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl   = { version = "0.29.0", features = ["token_2022", "associated_token"] }
#anchor-spl = { version = "0.29.0", features = ["token-2022", "associated-token"] }
