[package]
name = "loyl_token"
version = "0.1.0"
description = "Loyalty token program for business branded loyalty points"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "loyl_token"

[profile.release]
overflow-checks = false

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = [
  "anchor-lang/idl-build",
  "anchor-spl/idl-build",
]
default = ["init-if-needed"]
init-if-needed = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = [
    "token_2022",
    "associated_token",
] }
solana-program = "1.18.26"
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"] }
spl-token = "3.5.0"
tokio = "1.45.0"
